<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ZRAM Status</string>
    <string name="app_description">Android Application to show zram (http://en.wikipedia.org/wiki/ZRam) status. Please visit http://adhisimon.github.com/android-zram-status/ for more information. Source code available at https://github.com/adhisimon/android-zram-status for free.</string>
    <string name="app_license"><![CDATA[Distributed under the following BSD 3-Clause License:<br>
<br>
Copyright (c) 2013 Adhidarma. All rights reserved.<br>
<br>
Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:<br>
<br>
1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.<br>
<br>
2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.<br>
<br>
3. Neither the name of Adhidarma nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.<br>
<br>
THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL INFRAE OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.]]></string>
    
    <string name="action_reload">Reload</string>
    <string name="action_about">About</string>
    <string name="action_share">Share this app&#8230;</string>
    <string name="action_exit">Exit</string>
       
    <string name="zram_disk_size">ZRAM Disk Size:</string>
    <string name="zram_compressed_data_size">ZRAM Compressed Data Size:</string>
	<string name="zram_original_data_size">ZRAM Original Data Size:</string>
    <string name="zram_mem_used_total">ZRAM Total Memory Used:</string>
    <string name="zram_number_of_files">ZRAM Number Of Files:</string>
    
    <string name="zram_compression_ratio">ZRAM Compression Ratio:</string>
    <string name="zram_used_ratio">ZRAM Used Ratio:</string>
    
    <string name="ram_available">Free RAM:</string>
    
    <string name="text_kernel">Kernel:</string>
    <string name="text_device">Device:</string>
    <string name="text_version">Version</string>
</resources>