<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zram_disk_size"
        android:text="@string/zram_disk_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zram_compressed_data_size"
        android:text="@string/zram_compressed_data_size" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zram_original_data_size"
        android:text="@string/zram_original_data_size" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zram_mem_used_total"
        android:text="@string/zram_mem_used_total" />
    
    <ProgressBar
    	android:id="@+id/zram_compression_ratio_bar"
    	android:paddingTop="32sp"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:progress="0" 
        style="@android:style/Widget.ProgressBar.Horizontal" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zram_compression_ratio"
        android:text="@string/zram_compression_ratio" />
    
    <ProgressBar
    	android:id="@+id/zram_used_ratio_bar"
    	android:paddingTop="32sp"
        android:layout_width="fill_parent"
        android:layout_height="64dp"
        android:progress="0" 
        style="@android:style/Widget.ProgressBar.Horizontal" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/zram_used_ratio"
        android:text="@string/zram_used_ratio" />
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kernel_version"
        android:textIsSelectable="true" />
        
    
    
</LinearLayout>